# PK2Project

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Notatki.txt  db.txt
include/: Application.cpp  Application.h  Elements.cpp  Elements.h  FileManager.h  Koder.cpp  Koder.h  LinkedList.h  Localization.h  Object.h  SystemSpecific.h  main.cpp
src/: Application.cpp  Elements.cpp  FileManager.cpp  Koder.cpp  main.cpp
